--- a/education.html
+++ b/education.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords"
-    content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
+    content="Neshaa's portfolio website" />
   <meta name="description"
     content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world." />
   
