--- a/research.html
+++ b/research.html
@@ -21,7 +21,7 @@
   <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/research.html">
   <meta property="og:title" content="Neshaa Lakshminarayanan | Research">
   <meta property="og:description"
-    content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
+    content="Home Projects Education">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://portfolio.smaranjitghose.codes/research.html">
   <meta name="twitter:card" content="summary">
