--- a/education.html
+++ b/education.html
@@ -8,7 +8,7 @@
   <meta name="keywords"
     content="Neshaa's portfolio website" />
   <meta name="description"
-    content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world." />
+    content="Home Projects Education" />
   
     <!-- Robot.txt -->
   <meta name="robots" content="index,follow" />
@@ -18,7 +18,7 @@
   <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/education.html">
   <meta property="og:title" content="Neshaa Lakshminarayanan | Education">
   <meta property="og:description"
-    content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
+    content="Home Projects Education">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://portfolio.smaranjitghose.codes/education.html">
   <meta name="twitter:card" content="summary">
