--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords"
         content="Neshaa's portfolio website" />
     <meta name="description"
-        content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world." />
+        content="Home Projects Education" />
     <!-- Robot.txt -->
     <meta name="robots" content="index,follow" />
     <meta name="Googlebot" content="index,follow" />
@@ -16,7 +16,7 @@
     <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/">
     <meta property="og:title" content="Neshaa Lakshminarayanan | Home">
     <meta property="og:description"
-        content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
+        content="Home Projects Education">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://portfolio.smaranjitghose.codes/">
     <meta name="twitter:card" content="summary">
