--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <meta name="robots" content="index,follow" />
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
-    <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/">
+    <meta property="og:site_name" content="https://neshaalaksh.github.io/">
     <meta property="og:title" content="Neshaa Lakshminarayanan | Home">
     <meta property="og:description"
         content="Home Projects Education">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://portfolio.smaranjitghose.codes/">
+    <meta property="og:url" content="https://neshaalaksh.github.io/">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/">
+    <meta name="twitter:site" content="https://neshaalaksh.github.io/">
     <meta name="application-name" content="Neshaa Lakshminarayanan | Home" />
     <meta name="apple-mobile-web-app-title" content="Neshaa Lakshminarayanan | Home" />
     <meta name="summary"
