--- a/education.html
+++ b/education.html
@@ -15,14 +15,14 @@
   <meta name="Googlebot" content="index,follow" />
   <meta name="AdsBot-Google" content="index,follow" />
 
-  <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/education.html">
+  <meta property="og:site_name" content="https://neshaalaksh.github.io/education.html">
   <meta property="og:title" content="Neshaa Lakshminarayanan | Education">
   <meta property="og:description"
     content="Home Projects Education">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://portfolio.smaranjitghose.codes/education.html">
+  <meta property="og:url" content="https://neshaalaksh.github.io/education.html">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/education.html">
+  <meta name="twitter:site" content="https://neshaalaksh.github.io/education.html">
 
   <meta name="application-name" content="Neshaa Lakshminarayanan | Education" />
   <meta name="apple-mobile-web-app-title" content="Neshaa Lakshminarayanan | Education" />
