--- a/research.html
+++ b/research.html
@@ -18,14 +18,14 @@
   <meta name="Googlebot" content="index,follow" />
   <meta name="AdsBot-Google" content="index,follow" />
 
-  <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/research.html">
+  <meta property="og:site_name" content="https://neshaalaksh.github.io/research.html">
   <meta property="og:title" content="Neshaa Lakshminarayanan | Research">
   <meta property="og:description"
     content="Home Projects Education">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://portfolio.smaranjitghose.codes/research.html">
+  <meta property="og:url" content="https://neshaalaksh.github.io/research.html">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/research.html">
+  <meta name="twitter:site" content="https://neshaalaksh.github.io/research.html">
 
   <meta name="application-name" content="Neshaa Lakshminarayanan | Research" />
   <meta name="apple-mobile-web-app-title" content="Neshaa Lakshminarayanan | Research" />
