--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="application-name" content="Neshaa Lakshminarayanan | Home" />
     <meta name="apple-mobile-web-app-title" content="Neshaa Lakshminarayanan | Home" />
     <meta name="summary"
-        content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
+        content="Portfolio" />
     <!--For Dark/Light mode Toggle-->
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
     <!--Import Google Icon Font-->
