--- a/education.html
+++ b/education.html
@@ -51,7 +51,7 @@
   <!--Dynamic Nav Bar-->
 
   <!--Header Section-->
-<div class="container pt-5" style="width: 100%; min-height: 80%;">
+<!-- <div class="container pt-5" style="width: 100%; min-height: 80%;">
   <section style="height: 90vh;">
     <div class="container-fluid px-3 pt-5">
       <div class="row text-dark mx-auto">
@@ -59,11 +59,15 @@
           <img class="img-fluid d-block  animate__animated animate__zoomIn animate__delay-1s"
             src="./assets/images/education-page/header-male.svg" draggable="true" style="margin-top: 45px;" alt="animated logo, Education" /> 
         </div>
-        <div class="px-md-5 p-3 col-md-6 d-flex flex-column align-items-center justify-content-center animate__animated animate__zoomIn animate__delay-1s">
-          <h2 class="main-heading mb-0">Education</h2>
-          <p class=" pre-heading font-weight-bolder text-center animate__animated animate__fadeInUp animate__delay-2s">
+        <div class="px-md-5 p-3 col-md-6 d-flex flex-column align-items-center justify-content-center animate__animated animate__zoomIn animate__delay-1s"> -->
+          <br>
+          <br>
+          <br>
+          <br>
+          <!-- <h2 class="main-heading mb-0">Education</h2> -->
+          <!-- <p class=" pre-heading font-weight-bolder text-center animate__animated animate__fadeInUp animate__delay-2s">
            An investment in knowledge pays the best interest. –  Benjamin Franklin
-          </p>
+          </p> -->
         </div>
       </div>
     </div>
@@ -72,6 +76,7 @@
 
 
   <!-- Education Section  -->
+  <br>
 <section class="s2">
   <div class="container-sm  edSection">
     <div class="conatiner text-center mb-5">
