--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -116,11 +116,11 @@
               <br>
               <p><b><u>Trinity college of London</u></b> : Initial, Grade 1, Grade 2.</p>
               <p><b><u>Links</u></b> : </p>
-              <p>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<a href=''>All too well by Taylor Swift</a></p>
-              <p>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<a href=''>Champagne problems by Taylor Swift</a></p>
-              <p>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<a href=''>Greensleeves by Mozart</a></p>
-              <p>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<a href=''>Cradle song</a></p>
-              <p>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<a href=''>March</a></p>
+              <p><a href=''>All too well by Taylor Swift</a></p>
+              <p><a href=''>Champagne problems by Taylor Swift</a></p>
+              <p><a href=''>Greensleeves by Mozart</a></p>
+              <p><a href=''>Cradle song</a></p>
+              <p><a href=''>March</a></p>
             </div>
           </div>
         </div>  
@@ -136,7 +136,7 @@
           <div class="qual">
           <h6><em></em></h6>
           <br>
-            <p>&emsp;1.   <a href="">Potato deluge</a></p>
+            <p>1.   <a href="">Potato deluge</a></p>
             <p>2.  <a href="">Scalloped potato(Layered)</a></p>
             <p>3.  <a href="">Potato wedges with Chilli oil,Garlic butter and mayonaise(baked)</a></p>
             <p>4.  <a href="">Potato wedges with Cheese sauce(baked)</a></p>
