--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -9,7 +9,7 @@
     content="Neshaa's portfolio website" />
   <meta name="description"
     content="Home Projects Education" />
-  
+    
     <!-- Robot.txt -->
   <meta name="robots" content="index,follow" />
   <meta name="Googlebot" content="index,follow" />
@@ -93,11 +93,11 @@
           <div class="col-xl-6 col-md-6 col-sm-12 p-5">
             <h4>Sports</h4>
             <div class="qual">
-            <h6><em></em></h6>
+              <h6><em>Captained my team in inter and intra school competitions</em></h6>
             <br>
             <p><b><u>Individual events</u></b> : 100m, 200m, 400m, 800m, High jump, Long jump, Tripple jump, Shotput, Discus throw, Chess, Table tennis, Cycling and Swimming.</p>
             <p><b><u>Group events</u></b> : Football, Handball, Basketball, Throwball, Cricket, Volleyball, Dodgeball, Badminton and Kho-Kho.</p>
-            <p><a href=''>Certificates</a></p>
+            <p><a href=''>Collateral</a></p>
           </div>
         </div>
       </div>  
@@ -129,14 +129,16 @@
     <div class="card mb-5" data-aos="fade-left" data-aos-delay="500">
       <div class="row">
         <div class="col-xl-6 col-md-6 col-sm-12">
-          <img src="assets/images/extracurriculars/cooking1.png" alt="cooking1.png">
+          <img src="./assets/images/extracurriculars/cooking.png" alt="cooking.png">
         </div>
         <div class="col-xl-6 col-md-6 col-sm-12 p-5">
-          <h4>Cooking(Own recipes)</h4>
+          <h4>Cooking</h4>
           <div class="qual">
-          <h6><em></em></h6>
+          <h6><em>Own recipes</em></h6>
           <br>
-            <p>1.   <a href="">Potato deluge</a></p>
+          <p>Check out my page to know more!</p>
+          <p><a href="./recipebook/index.html">My recipes book</a></p>
+            <!-- <p>1.   <a href="recipes/1.html">Potato deluge</a></p>
             <p>2.  <a href="">Scalloped potato(Layered)</a></p>
             <p>3.  <a href="">Potato wedges with Chilli oil,Garlic butter and mayonaise(baked)</a></p>
             <p>4.  <a href="">Potato wedges with Cheese sauce(baked)</a></p>
@@ -179,7 +181,7 @@
             <p>41.  <a href="">Cottage fries</a></p>
             <p>42.  <a href="">Stuffed bindhi fry</a></p>
             <p>43.  <a href="">Parmesan and garlic roasted potato cubes </a></p>
-            <p>44.  <a href="">Pizza</a></p>
+            <p>44.  <a href="">Pizza</a></p> -->
         </div>
       </div>
     </div>  
