--- a/recipebook/recipe.html
+++ b/recipebook/recipe.html
@@ -49,7 +49,7 @@
   ================= -->
   <section id="logo">
     <div class="container text-center wow pulse">
-      <!-- <img src="images/logo-white.svg" alt="logo" /> -->
+      <img src="images/logo-white.svg" alt="logo" />
       <br />
       <h1>Recipe Book</h1>
     </div>
