--- a/recipebook/recipe/recipe45.html
+++ b/recipebook/recipe/recipe45.html
@@ -7,31 +7,31 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Barbecue Pork Ribs | Recipe Book</title>
+  <title>Lilliputian's paneer tikka | Recipe Book</title>
 
   <!-- Favicon
   ============ -->
-  <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png" />
-  <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png" />
-  <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png" />
-  <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png" />
-  <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png" />
-  <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png" />
-  <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png" />
-  <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png" />
-  <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png" />
+  <link rel="apple-touch-icon" sizes="57x57" href="../images/favicon/apple-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="60x60" href="../images/favicon/apple-icon-60x60.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="../images/favicon/apple-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="../images/favicon/apple-icon-76x76.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="../images/favicon/apple-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="../images/favicon/apple-icon-120x120.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="../images/favicon/apple-icon-144x144.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="../images/favicon/apple-icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="../images/favicon/apple-icon-180x180.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="../images/favicon/android-icon-192x192.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="../images/favicon/favicon-96x96.png" />
 
   <!-- CSS files
   ============== -->
-  <link rel="stylesheet" type="text/css" href="css/reset.css" />
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-  <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"  />
-  <link rel="stylesheet" type="text/css" href="css/animate.min.css" />
-  <link rel="stylesheet" type="text/css" href="css/styles.css" />
+  <link rel="stylesheet" type="text/css" href="../css/reset.css" />
+  <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css"  />
+  <link rel="stylesheet" type="text/css" href="../css/animate.min.css" />
+  <link rel="stylesheet" type="text/css" href="../css/styles.css" />
 
   <!-- Modernizr file
   =================== -->
@@ -49,7 +49,7 @@
   ================= -->
   <section id="logo">
     <div class="container text-center wow pulse">
-      <img src="images/logo-white.svg" alt="logo" />
+      <img src="../images/logo-white.svg" alt="logo" />
       <br />
       <h1>Recipe Book</h1>
     </div>
@@ -62,14 +62,14 @@
       <div class="row">
         <!-- Title -->
         <div class="col-12">
-          <h2>Barbecue Pork Ribs</h2>
+          <h2>Lilliputian's paneer tikka</h2>
         </div>
       </div>
       <div class="row vertical-align">
         <div class="col-12">
           <!-- Picture -->
           <div class="col-md-8 pull-left wow swing">
-            <img src="images/bbq-pork-ribs.jpg" alt="bbq-pork-ribs" class="recipe-picture" />
+            <img src="../images/lp.jpg" alt="pd" class="recipe-picture" />
           </div>
           <!-- Info -->
           <div class="col-md-4 pull-right wow lightSpeedIn">
@@ -81,7 +81,7 @@
                   <i class="fa fa-clock-o" aria-hidden="true"></i>
                 </div>
                 <div class="col-6">Time</div>
-                <div class="col-4">3:00 H</div>
+                <div class="col-4">1:20 H</div>
               </div>
               <!-- Difficulty -->
               <div class="row">
@@ -143,7 +143,7 @@
       <!-- Back to recipes -->
       <div class="row wow rollIn">
         <div class="col-12 text-center">
-          <a href="index.html">
+          <a href="../index.html">
             <i class="fa fa-backward" aria-hidden="true"></i>
             Go to back to recipes.
           </a>
@@ -174,7 +174,7 @@
             Made with
             <i class="fa fa-heart" aria-hidden="true"></i>
             love by
-            <a href="https://jraleman.com/" target="_blank">Jose Ramon</a>.
+            <a href="" target="_blank">Neshaa Lakshminarayanan</a>.
           </div>
         </div>
       </div>
@@ -182,10 +182,10 @@
   </footer>
   <!-- JavaScript files
   ===================== -->
-  <script charset="utf-8" src="js/jquery-3.3.1.min.js"></script>
-  <script charset="utf-8" src="js/bootstrap.min.js"></script>
-  <script charset="utf-8" src="js/wow.min.js"></script>
-  <script charset="utf-8" src="js/scripts.js"></script>
+  <script charset="utf-8" src="../js/jquery-3.3.1.min.js"></script>
+  <script charset="utf-8" src="../js/bootstrap.min.js"></script>
+  <script charset="utf-8" src="../js/wow.min.js"></script>
+  <script charset="utf-8" src="../js/scripts.js"></script>
 </body>
 
 </html>
