--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -103,8 +103,8 @@
       </div>  
     </div>
     <!-- 2 -->
-    <div>
-        <div class="card mb-5" data-aos="fade-left" data-aos-delay="500">
+    <div id='piano'>
+        <div class="card mb-5" data-aos="fade-left" data-aos-delay="500" >
           <div class="row">
             <div class="col-xl-6 col-md-6 col-sm-12">
               <img src="assets/images/extracurriculars/piano.png" alt="piano.png" >
