--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -85,6 +85,7 @@
     </div>
       <!-- CARDS -->
       <!-- 1 -->
+      <div id='sports'>
       <div class="card mb-5" data-aos="fade-left" data-aos-delay="500">
         <div class="row">
           <div class="col-xl-6 col-md-6 col-sm-12">
@@ -102,6 +103,7 @@
         </div>
       </div>  
     </div>
+  </div>
     <!-- 2 -->
     <div id='piano'>
         <div class="card mb-5" data-aos="fade-left" data-aos-delay="500" >
