--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -98,7 +98,7 @@
             <br>
             <p><b><u>Individual events</u></b> : 100m, 200m, 400m, 800m, High jump, Long jump, Tripple jump, Shotput, Discus throw, Chess, Table tennis, Cycling and Swimming.</p>
             <p><b><u>Group events</u></b> : Football, Handball, Basketball, Throwball, Cricket, Volleyball, Dodgeball, Badminton and Kho-Kho.</p>
-            <p><a href=''>Collateral</a></p>
+            <p><a href='./certificates/Sports.pdf'>Collateral</a></p>
           </div>
         </div>
       </div>  
@@ -117,6 +117,7 @@
               <h6><em></em></h6>
               <br>
               <p><b><u>Trinity college of London</u></b> : Initial, Grade 1, Grade 2.</p>
+              <p><a href='./certificates/Piano.pdf'>Certificates</a></p>
               <p><b><u>Links</u></b> : </p>
               <p><a href='https://drive.google.com/file/d/1WVptCsDz3Svqc4iROlcCPcy35b69bHwK/view?usp=sharing'>All too well by Taylor Swift</a></p>
               <p><a href='https://drive.google.com/file/d/1HlAJj0jwjDZ-I1MvdfUONl9EDHePNW0C/view?usp=sharing'>Champagne problems by Taylor Swift</a></p>
@@ -128,66 +129,41 @@
         </div>  
       </div>
     <!-- 3 -->
+    <div id='Cooking'>
     <div class="card mb-5" data-aos="fade-left" data-aos-delay="500">
       <div class="row">
         <div class="col-xl-6 col-md-6 col-sm-12">
-          <img src="./assets/images/extracurriculars/cooking.png" alt="cooking.png">
+          <img src="./assets/images/extracurriculars/cooking1.png" alt="cooking.png">
         </div>
         <div class="col-xl-6 col-md-6 col-sm-12 p-5">
           <h4>Cooking</h4>
           <div class="qual">
-          <h6><em>Own recipes</em></h6>
+          <h6><em>(Own recipes)</em></h6>
           <br>
-          <p>Check out my page to know more!</p>
-          <p><a href="./recipebook/index.html">My recipes book</a></p>
-            <!-- <p>1.   <a href="recipes/1.html">Potato deluge</a></p>
-            <p>2.  <a href="">Scalloped potato(Layered)</a></p>
-            <p>3.  <a href="">Potato wedges with Chilli oil,Garlic butter and mayonaise(baked)</a></p>
-            <p>4.  <a href="">Potato wedges with Cheese sauce(baked)</a></p>
-            <p>5.  <a href="">Cajun Potato wedges(baked)</a></p>
-            <p>6.  <a href="">Potato wedges(fried)</a></p>
-            <p>7.  <a href="">Stacked Potato(baked)</a></p>
-            <p>8.  <a href="">Tornado Potato</a></p>
-            <p>9.  <a href="">Baked Potato(v1)</a></p>
-            <p>10.  <a href="">Baked Potato(v2)</a></p>
-            <p>11.  <a href="">Pan fried Potato</a></p>
-            <p>12.  <a href="">Garlic Oil infused Potato</a></p>
-            <p>13.  <a href="">Chilli oil</a></p>
-            <p>14.  <a href="">Cheese sauce</a></p>
-            <p>15.  <a href="">Veg Noodles with chilli oil</a></p>
-            <p>16.  <a href="">Cheddar cheese potato sticks(baked)</a></p>
-            <p>17.  <a href="">Potato wedges with Chilli oil(baked)</a></p>
-            <p>18.  <a href="">Savory gateau</a></p>
-            <p>19.  <a href="">Corn cannapes</a></p>
-            <p>20.  <a href="">Mozarella cheesy wedges cupcake</a></p>
-            <p>21.  <a href="">Chocolate pancake(eggless) and Potato wedges with herb cheese sauce</a></p>
-            <p>22.  <a href="">Paneer tikka frankie roll and Chocolate cake</a></p>
-            <p>23.  <a href="">Garlic bread</a></p>
-            <p>24.  <a href="">Chilli garlic potatoes</a></p>
-            <p>25.  <a href="">Crispy cheesy corn with paneer chunks</a></p>
-            <p>26.  <a href="">Chilli cheese toast(baked)</a></p>
-            <p>27.  <a href="">Garlic parmesan smashed potato(baked)</a></p>
-            <p>28.  <a href="">Garlic mayonnaise baked potato</a></p>
-            <p>29.  <a href="">Cajun spiced potatoes</a></p>
-            <p>30.  <a href="">Parmesan and herb roasted potatoes(baked)</a></p>
-            <p>31.  <a href="">Chilli garlic butter hasselback potato</a></p>
-            <p>32.  <a href="">Cheesy herbo maggie</a></p>
-            <p>33.  <a href="">Mug pizza</a></p>
-            <p>34.  <a href="">Roasted garlic potatoes(baked)</a></p>
-            <p>35.  <a href="">Potato cheese sticks</a></p>
-            <p>36.  <a href="">Chocolate icecream</a></p>
-            <p>37.  <a href="">Spring roll(baked)</a></p>
-            <p>38.  <a href="">French fries(baked)</a></p>
-            <p>39.  <a href="">Garlic French fries(baked)</a></p>
-            <p>40.  <a href="">Cheesy aloo tikki burger</a></p>
-            <p>41.  <a href="">Cottage fries</a></p>
-            <p>42.  <a href="">Stuffed bindhi fry</a></p>
-            <p>43.  <a href="">Parmesan and garlic roasted potato cubes </a></p>
-            <p>44.  <a href="">Pizza</a></p> -->
+          <p><a href="./recipebook/index.html">My Cookbook page</a></p>
         </div>
       </div>
     </div>  
   </div>
+</div>
+<!-- 4 -->
+<div id='happen'>
+  <div class="card mb-5" data-aos="fade-left" data-aos-delay="500">
+    <div class="row">
+      <div class="col-xl-6 col-md-6 col-sm-12">
+        <img src="./assets/images/extracurriculars/happen.png" alt="cooking.png">
+      </div>
+      <div class="col-xl-6 col-md-6 col-sm-12 p-5">
+        <h4>HAP-PEN</h4>
+        <div class="qual">
+        <h6><em>(Idea)</em></h6>
+        <br>
+        <p><a href="https://docs.google.com/presentation/d/1QJnWw85I3hz2ysnQyeFSBqmBN1RMFmlqCtnDboi2niw/edit?usp=sharing">A short ppt explanation</a></p>
+      </div>
+    </div>
+  </div>  
+</div>
+</div>
 </section>           
 
   <!--MOOCs Cards-->
