--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -85,7 +85,7 @@
     </div>
       <!-- CARDS -->
       <!-- 1 -->
-      <div id='sports'>
+      <div id='Sports'>
       <div class="card mb-5" data-aos="fade-left" data-aos-delay="500">
         <div class="row">
           <div class="col-xl-6 col-md-6 col-sm-12">
@@ -94,7 +94,7 @@
           <div class="col-xl-6 col-md-6 col-sm-12 p-5">
             <h4>Sports</h4>
             <div class="qual">
-              <h6><em>Captained my team in inter and intra school competitions</em></h6>
+              <h6><em>Captained my team in inter and intra school competitions 2017-2019</em></h6>
             <br>
             <p><b><u>Individual events</u></b> : 100m, 200m, 400m, 800m, High jump, Long jump, Tripple jump, Shotput, Discus throw, Chess, Table tennis, Cycling and Swimming.</p>
             <p><b><u>Group events</u></b> : Football, Handball, Basketball, Throwball, Cricket, Volleyball, Dodgeball, Badminton and Kho-Kho.</p>
@@ -105,7 +105,7 @@
     </div>
   </div>
     <!-- 2 -->
-    <div id='piano'>
+    <div id='Piano'>
         <div class="card mb-5" data-aos="fade-left" data-aos-delay="500" >
           <div class="row">
             <div class="col-xl-6 col-md-6 col-sm-12">
@@ -133,12 +133,12 @@
     <div class="card mb-5" data-aos="fade-left" data-aos-delay="500">
       <div class="row">
         <div class="col-xl-6 col-md-6 col-sm-12">
-          <img src="./assets/images/extracurriculars/cooking1.png" alt="cooking.png">
+          <img src="./assets/images/extracurriculars/cooking.png" alt="cooking.png">
         </div>
         <div class="col-xl-6 col-md-6 col-sm-12 p-5">
           <h4>Cooking</h4>
           <div class="qual">
-          <h6><em>(Own recipes)</em></h6>
+          <h6><em>Own recipes</em></h6>
           <br>
           <p><a href="./recipebook/index.html">My Cookbook page</a></p>
         </div>
@@ -147,18 +147,64 @@
   </div>
 </div>
 <!-- 4 -->
-<div id='happen'>
+<div id='Programming'>
   <div class="card mb-5" data-aos="fade-left" data-aos-delay="500">
     <div class="row">
       <div class="col-xl-6 col-md-6 col-sm-12">
-        <img src="./assets/images/extracurriculars/happen.png" alt="cooking.png">
+        <img src="./assets/images/extracurriculars/programming.png" alt="cooking.png">
+      </div>
+      <div class="col-xl-6 col-md-6 col-sm-12 p-5">
+        <h4>Programming</h4>
+        <div class="qual">
+        <h6><em>Data analyst, iOS and android app developer, Website developer, Game developer and a Mentor.</em></h6>
+        <br>
+        <p><a href="./index.html#projects">My Projects</a></p>
+        <p><a href="#">Mentoring (Certificate from school)</a></p>
+        <p><a href="#">Webinar for classes 6-12 (Certificate from school for conducting)</a></p>
+      </div>
+    </div>
+  </div>  
+</div>
+</div>
+<!-- 5 -->
+<div id='Happen'>
+  <div class="card mb-5" data-aos="fade-left" data-aos-delay="500">
+    <div class="row">
+      <div class="col-xl-6 col-md-6 col-sm-12">
+        <img src="./assets/images/extracurriculars/idea.png" alt="cooking.png">
       </div>
       <div class="col-xl-6 col-md-6 col-sm-12 p-5">
         <h4>HAP-PEN</h4>
         <div class="qual">
-        <h6><em>(Idea)</em></h6>
+        <h6><em>2016-2021</em></h6>
         <br>
         <p><a href="https://docs.google.com/presentation/d/1QJnWw85I3hz2ysnQyeFSBqmBN1RMFmlqCtnDboi2niw/edit?usp=sharing">A short ppt explanation</a></p>
+        <p><a href="#">Recognition from school</a></p>
+      </div>
+    </div>
+  </div>  
+</div>
+</div>
+<!-- 6 -->
+<div id='Others'>
+  <div class="card mb-5" data-aos="fade-left" data-aos-delay="500">
+    <div class="row">
+      <div class="col-xl-6 col-md-6 col-sm-12">
+        <img src="./assets/images/extracurriculars/Others.png" alt="cooking.png">
+      </div>
+      <div class="col-xl-6 col-md-6 col-sm-12 p-5">
+        <h4>Others</h4>
+        <div class="qual">
+        <h6><em></em></h6>
+        <br>
+        <p><a href="#">Hindi Prachar exam</a></p>
+        <p><a href="#">Competitions</a></p>
+        <p><a href="./certificates/Talent hunt certificate.pdf">Talent hunt</a></p>
+        <p><a href="./certificates/Analysis business.pdf">Coursera certificate for business analysis</a></p>
+        <p><a href="./certificates/YSP-UL certificate.pdf">YSP-Urban lab conducted by Ashoka University</a></p>
+        <p><a href="./certificates/potpurri.pdf">Potpurri runner up</a></p>
+        <p><a href="#">Olympiads</a></p>
+        <p><a href="#">Young world quiz</a></p>
       </div>
     </div>
   </div>  
