unwanted files removed

--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -8,7 +8,7 @@
   <meta name="keywords"
     content="Neshaa's portfolio website" />
   <meta name="description"
-    content="Home Projects Education" />
+    content="Home Projects Extracurriculars" />
     
     <!-- Robot.txt -->
   <meta name="robots" content="index,follow" />
@@ -18,7 +18,7 @@
   <meta property="og:site_name" content="https://neshaalaksh.github.io/extracurriculars.html">
   <meta property="og:title" content="Neshaa Lakshminarayanan | Extra-curriculars">
   <meta property="og:description"
-    content="Home Projects Education">
+    content="Home Projects Extracurriculars">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://neshaalaksh.github.io/extracurriculars.html">
   <meta name="twitter:card" content="summary">
@@ -26,8 +26,6 @@
 
   <meta name="application-name" content="Neshaa Lakshminarayanan | Extra-curriculars" />
   <meta name="apple-mobile-web-app-title" content="Neshaa Lakshminarayanan | Extra-curriculars" />
-  <meta name="summary"
-    content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
 
   <!--For Dark/Light mode Toggle-->
@@ -197,6 +195,7 @@
         <div class="qual">
         <h6><em></em></h6>
         <br>
+        <p><a href="#">Been a part of NGO's</a></p>
         <p><a href="#">Hindi Prachar exam</a></p>
         <p><a href="#">Competitions</a></p>
         <p><a href="./certificates/Talent hunt certificate.pdf">Talent hunt</a></p>
