--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -157,8 +157,7 @@
         <h6><em>Data analyst, iOS and android app developer, Website developer, Game developer and a Mentor.</em></h6>
         <br>
         <p><a href="./index.html#projects">My Projects</a></p>
-        <p><a href="#">Mentoring (Certificate from school)</a></p>
-        <p><a href="#">Webinar for classes 6-12 (Certificate from school for conducting)</a></p>
+        <p><a href="./certificates/webinar certificate.jpg">Webinar for classes 6-12 (Certificate from school for conducting)</a></p>
       </div>
     </div>
   </div>  
@@ -177,7 +176,7 @@
         <h6><em>2016-2021</em></h6>
         <br>
         <p><a href="https://docs.google.com/presentation/d/1QJnWw85I3hz2ysnQyeFSBqmBN1RMFmlqCtnDboi2niw/edit?usp=sharing">A short ppt explanation</a></p>
-        <p><a href="#">Recognition from school</a></p>
+        <p><a href="./certificates/happen certificate.jpg">Recognition from school</a></p>
       </div>
     </div>
   </div>  
