addition of links and removal of unwanted files

--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -96,7 +96,7 @@
             <br>
             <p><b><u>Individual events</u></b> : 100m, 200m, 400m, 800m, High jump, Long jump, Tripple jump, Shotput, Discus throw, Chess, Table tennis, Cycling and Swimming.</p>
             <p><b><u>Group events</u></b> : Football, Handball, Basketball, Throwball, Cricket, Volleyball, Dodgeball, Badminton and Kho-Kho.</p>
-            <p><a href='./certificates/Sports.pdf'>Collateral</a></p>
+            <p><a href='./certificates/Sports.pdf'>Certificates</a></p>
           </div>
         </div>
       </div>  
@@ -157,6 +157,7 @@
         <h6><em>Data analyst, iOS and android app developer, Website developer, Game developer and a Mentor.</em></h6>
         <br>
         <p><a href="./index.html#projects">My Projects</a></p>
+        <p><a href="./certificates/Programming.pdf">Certificates</a></p>
         <p><a href="./certificates/webinar certificate.jpg">Webinar for classes 6-12 (Certificate from school for conducting)</a></p>
       </div>
     </div>
@@ -194,15 +195,14 @@
         <div class="qual">
         <h6><em></em></h6>
         <br>
-        <p><a href="#">Been a part of NGO's</a></p>
-        <p><a href="#">Hindi Prachar exam</a></p>
-        <p><a href="#">Competitions</a></p>
+        <p><a href="">Been a part of NGO's</a></p>
+        <p><a href="./certificates/hpe.pdf">Hindi Prachar exam</a></p>
         <p><a href="./certificates/Talent hunt certificate.pdf">Talent hunt</a></p>
         <p><a href="./certificates/Analysis business.pdf">Coursera certificate for business analysis</a></p>
         <p><a href="./certificates/YSP-UL certificate.pdf">YSP-Urban lab conducted by Ashoka University</a></p>
         <p><a href="./certificates/potpurri.pdf">Potpurri runner up</a></p>
-        <p><a href="#">Olympiads</a></p>
-        <p><a href="#">Young world quiz</a></p>
+        <p><a href="./certificates/Olympiad.pdf">Olympiads</a></p>
+        <p><a href="./certificates/Yw.pdf">Young world quiz</a></p>
       </div>
     </div>
   </div>  
