--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -42,6 +42,10 @@
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="icon" href="assets/images/favicon.png" type="image/png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css"> 
+
+  <!-- alert styling -->
+  <!-- <script src="./assets/js/sweetalert-dev.js"></script>
+  <link rel="stylesheet" href="./assets/css/sweetalert.css"> -->
 </head>
 
 <body>
@@ -203,6 +207,7 @@
         <p><a href="./certificates/potpurri.pdf">Potpurri runner up</a></p>
         <p><a href="./certificates/Olympiad.pdf">Olympiads</a></p>
         <p><a href="./certificates/Yw.pdf">Young world quiz</a></p>
+        <p><a href='./certificates/iimun1.jpeg'>IIMUN YouthHut 2021</a></p>
       </div>
     </div>
   </div>  
