added stuff in extracurriculars

--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -100,6 +100,7 @@
             <br>
             <p><b><u>Individual events</u></b> : 100m, 200m, 400m, 800m, High jump, Long jump, Tripple jump, Shotput, Discus throw, Chess, Table tennis, Cycling and Swimming.</p>
             <p><b><u>Group events</u></b> : Football, Handball, Basketball, Throwball, Cricket, Volleyball, Dodgeball, Badminton and Kho-Kho.</p>
+            <p><b><u>Acheivements as a captain</u></b>: Participated in 2 tournaments and won 2nd in Football(Sahodaya), 4th in Handball(Interschool) and won many awards in intra-school competitions</p>
             <p><a href='./certificates/Sports.pdf'>Certificates</a></p>
           </div>
         </div>
@@ -119,6 +120,7 @@
               <h6><em></em></h6>
               <br>
               <p><b><u>Trinity college of London</u></b> : Initial, Grade 1, Grade 2.</p>
+              <p>Played piano from class 4 to class 7 for the school Annual day(BVM Global @ Trichy)</p>
               <p><a href='./certificates/Piano.pdf'>Certificates</a></p>
               <p><b><u>Links</u></b> : </p>
               <p><a href='https://drive.google.com/file/d/1WVptCsDz3Svqc4iROlcCPcy35b69bHwK/view?usp=sharing'>All too well by Taylor Swift</a></p>
@@ -162,7 +164,7 @@
         <br>
         <p><a href="./index.html#projects">My Projects</a></p>
         <p><a href="./certificates/Programming.pdf">Certificates</a></p>
-        <p><a href="./certificates/webinar certificate.jpg">Webinar for classes 6-12 (Certificate from school for conducting)</a></p>
+        <p><a href="./certificates/webinar certificate.jpg">Webinar series for classes 6-12 (Certificate from school for conducting)</a></p>
       </div>
     </div>
   </div>  
@@ -178,10 +180,10 @@
       <div class="col-xl-6 col-md-6 col-sm-12 p-5">
         <h4>HAP-PEN</h4>
         <div class="qual">
-        <h6><em>2016-2021</em></h6>
+        <h6><em>Working on it since 2016</em></h6>
         <br>
         <p><a href="https://docs.google.com/presentation/d/1QJnWw85I3hz2ysnQyeFSBqmBN1RMFmlqCtnDboi2niw/edit?usp=sharing">A short ppt explanation</a></p>
-        <p><a href="./certificates/happen certificate.jpg">Recognition from school</a></p>
+        <p><a href="./certificates/happen certificate.jpg">Won <b><i>The Best Project</i></b> at Care innovates 2020</a></p>
       </div>
     </div>
   </div>  
@@ -199,6 +201,8 @@
         <div class="qual">
         <h6><em></em></h6>
         <br>
+        <p><a href=''>Main Character in the Tamil drama at Annual day function(2019-20) of Care international school</a></p>
+        <p>One of the main Characters in the English drama at Annual day function of BVM Global @ Trichy(2017-18) - Video is unnavailable as the school removed the video from YouTube</p>
         <p><a href="">Been a part of NGO's</a></p>
         <p><a href="./certificates/hpe.pdf">Hindi Prachar exam</a></p>
         <p><a href="./certificates/Talent hunt certificate.pdf">Talent hunt</a></p>
