--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <meta name="robots" content="index,follow" />
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
+    <meta name='og:image' content="./assets/images/dp_female.svg"
     <script src = "https://www.gstatic.com/firebasejs/6.2.2/firebase.js"></script>
     
 </head>
