added mp3 files

--- a/piano.html
+++ b/piano.html
@@ -126,6 +126,33 @@
         
           <h4>Cradle song</h4>
                     <hr>
+        <br>
+        <audio controls autoplay>
+          <source src="./assets/Piano/Hold on.mpeg" type="audio/mpeg">
+        Your browser does not support the audio element.
+        </audio>
+        <br>
+        <h4>Hold on by Justin bieber (Cover)</h4>
+        <hr>
+
+        <br>
+        <audio controls autoplay>
+          <source src="./assets/Piano/Sign of the times.mpeg" type="audio/mpeg">
+        Your browser does not support the audio element.
+        </audio>
+        <br>
+        <h4>Sign of the times by Harry styles (Cover)</h4>
+        <hr>
+
+        <br>
+        <audio controls autoplay>
+          <source src="./assets/Piano/Golden1.mpeg" type="audio/mpeg">
+        Your browser does not support the audio element.
+        </audio>
+        <br>
+        <h4>Golden by Harry styles (Cover)</h4>
+        <hr>
+
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167979537-2"></script>
   <!-- Fetching our Google Tag Manager -->
