modified mpeg files

--- a/piano.html
+++ b/piano.html
@@ -127,7 +127,7 @@
           <h4>Cradle song</h4>
                     <hr>
         <br>
-        <audio controls autoplay>
+        <audio controls>
           <source src="./assets/Piano/Hold on.mpeg" type="audio/mpeg">
         Your browser does not support the audio element.
         </audio>
@@ -136,7 +136,7 @@
         <hr>
 
         <br>
-        <audio controls autoplay>
+        <audio controls>
           <source src="./assets/Piano/Sign of the times.mpeg" type="audio/mpeg">
         Your browser does not support the audio element.
         </audio>
@@ -145,7 +145,7 @@
         <hr>
 
         <br>
-        <audio controls autoplay>
+        <audio controls>
           <source src="./assets/Piano/Golden1.mpeg" type="audio/mpeg">
         Your browser does not support the audio element.
         </audio>
